--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
         </div><!-- /.container-fluid -->
     </nav>
     <div class="row header" style="text-align: center" id="top">
-        <div class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
+        <div class="col-xs-12 col-md-8 col-md-offset-2  ">
             <h1>DU HỌC PHỔ THÔNG, DỰ BỊ ĐẠI HỌC NĂM HỌC 2016</h1>
         </div>
     </div><!--header-->
     <div class="row banner">
-        <div class="col-md-offset-1 col-md-7 col-sm-8 col-sm-offset-1 col-xs-11 col-xs-offset-1 banner-main">
+        <div class="col-xs-11 col-xs-offset-1 col-sm-8 col-sm-offset-1 col-md-7 col-md-offset-1   banner-main">
             <p>Du học từ bậc phổ thông có rất nhiều tính ưu việt như lĩnh hội kiến thức cũng như ngôn ngữ mới, giao lưu văn hoá hay làm quen phương pháp giảng dạy khoa học. Ngoài ra, học sinh du học từ bậc phổ thông thì khả năng định hướng nghề nghiệp, chọn trường Đại học, chọn ngành cũng phù hợp với cá nhân cao hơn so với các bạn du học muộn hơn.</p>
             <p>Sunrise Vietnam, từ năm 2002, đã là cầu nối mang lại cơ hội du học phổ thông tự túc cũng như xin học bổng cho học sinh khá giỏi. Chúng tôi mong muốn được đồng hành với các bạn trong dự định du học ngay từ bước đầu. Đăng ký ngay để được chuyên viên hỗ trợ cho chương trình du học phổ thông, dự bị đại học năm 2016.</p>
             <form>
-                <button type="button" class="col-md-offset-2 col-sm-offset-1 col-lg-offset-2 btn btn-primary" data-toggle="modal" data-target="#dangky">
+                <button type="button" class="col-sm-offset-1 col-md-offset-2 col-lg-offset-2 btn btn-primary" data-toggle="modal" data-target="#dangky">
                 ĐĂNG KÝ NGAY
             </button></form>
         </div>
@@ -62,9 +62,9 @@
     <a name="anhth"><div class="space"></div></a>
     <div class="anhth" id="anhth">
         <div class="row row1">
-            <div class="col-md-1 col-sm-1 col-xs-1 col-lg-1 anhth-r1l"><img src="photos/arrows.png">
+            <div class="col-xs-1 col-sm-1 anhth-r1l"><img src="photos/arrows.png">
                 </div>
-            <div class="col-md-5 col-sm-5 col-xs-11 col-lg-5 anhth-r1m">
+            <div class="col-xs-11 col-sm-5 anhth-r1m">
                 <h2>DU HỌC PHỔ THÔNG, DỰ BỊ ĐẠI HỌC ANH 2016</h2>
                 <p>- Dành cho học sinh hoàn thành lớp 8 từ Việt Nam trở lên </p>
                 <p>- Yêu cầu IELTS 4.5 trở lên. Chưa có tiếng Anh có thể làm kiểm tra tại Sunrise Vietnam  </p>
@@ -72,15 +72,15 @@
                 <p>- Cơ hội học bổng cao dành cho học sinh khá giỏi. </p>
                 <h3>LIÊN HỆ NGAY HOTLINE: 0906221313</h3>
             </div>
-            <div class="col-md-6 col-sm-6 col-xs-12 col-lg-6 anhth-r1r">
+            <div class="col-xs-12 col-sm-6 anhth-r1r">
                 <img src="photos/anhth-r1.jpg">
             </div>
         </div>
         <div class="row row2">
-            <div class="col-md-6 col-sm-6 col-xs-12 anhth-r2l">
+            <div class="col-xs-12 col-sm-6 anhth-r2l">
                 <img src="photos/anhth-r2.jpg">
             </div>
-            <div class="col-md-6 col-sm-6 col-xs-12 anhth-r2r">
+            <div class="col-xs-12 col-sm-6 anhth-r2r">
                 <h2 align="right"><img src="photos/arrows.png"> DANH SÁCH CÁC TRƯỜNG CÓ HỌC BỔNG 50% - 100%</h2>
                 <p>- Bellerbys College ( Brighton, Cambridge,  Oxford, London )</p>
                 <p>- CTC (Cambridge Tutors College) </p>
@@ -119,12 +119,12 @@
             <h2 style="text-align: center; color: #ffd119"><img src="photos/whitearrows.png">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DU HỌC PHỔ THÔNG MỸ, CANADA&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="photos/rightwhitearrows.png" ></h2>
         </div> </div>
         <div class="row myca-r2">
-            <div class="col-md-6 col-sm-6 col-xs-12">
+            <div class="col-xs-12 col-sm-6 ">
                 <p>- Dành cho học sinh hoàn thành lớp 8 tại Việt Nam trở lên  </p>
                 <p>- CÓ IELTS/ TOEFL là lợi thế. Có thể làm bài kiểm tra tại Sunrise Vietnam  </p>
                 <p>- Sunrise Vietnam hỗ trợ thi thử TOEFL, SAT</p>
             </div>
-            <div class="col-md-6 col-sm-6 col-xs-12">
+            <div class="col-xs-12 col-sm-6 ">
                 <p>- Học sinh ở nội trú hoặc gia đình bản xứ. Sunrise Vietnam luyện visa tỷ lệ đậu 99%, hỗ trợ visa thăm thân, dịch thuật,....  </p>
                 <p>- Sunrise Vietnam hỗ trợ làm hồ sơ xin học bổng, hỗ trợ tài chính cho học sinh khá giỏi</p>
                 <p style="font-size: 18px; font-weight:bold">- Hạn nộp hồ sơ các trường nội trú TOP đầu là 15/01/2016</p>
@@ -134,7 +134,7 @@
             <h2 style="text-align: center; color: #ffd119"><img src="photos/whitearrows.png">&nbsp;&nbsp;&nbsp;DANH SÁCH MỘT SỐ TRƯỜNG NỘI TRÚ TOP ĐẦU TẠI MỸ, CANADA &nbsp;&nbsp;&nbsp;<img src="photos/rightwhitearrows.png"></h2>
         </div> </div>
         <div class="row myca-r4">
-            <div class="col-md-4 col-sm-4 col-xs-12 firstcol">
+            <div class="col-xs-12 col-sm-4 firstcol">
                 <p><img src="photos/dot.png">&nbsp; Chapel Hill Chauncy Hall</p>
                 <p><img src="photos/dot.png">&nbsp; Cranbrook Schools </p>
                 <p><img src="photos/dot.png">&nbsp; Darrow </p>
@@ -144,7 +144,7 @@
                 <p><img src="photos/dot.png">&nbsp; La Lumiere School </p>
                 <p><img src="photos/dot.png">&nbsp; Lawrence Academy</p>
             </div>
-            <div class="col-md-4  col-sm-4 col-xs-12 mdcol">
+            <div class="col-xs-12 col-sm-4 mdcol">
                 <p><img src="photos/dot.png">&nbsp; Ribet Academy </p>
                 <p><img src="photos/dot.png">&nbsp; Saint Andrew's School </p>
                 <p><img src="photos/dot.png">&nbsp; Saint Timothy's School (Girls) </p>
@@ -154,7 +154,7 @@
                 <p><img src="photos/dot.png">&nbsp; White Mountain School </p>
                 <p><img src="photos/dot.png">&nbsp; The Winchendon School</p>
             </div>
-            <div class="col-md-4  col-sm-4 col-xs-12 lastcol">
+            <div class="col-xs-12 col-sm-4 lastcol">
                 <p><img src="photos/dot.png">&nbsp; The Masters School </p>
                 <p><img src="photos/dot.png">&nbsp; Mercersburg Academy </p>
                 <p><img src="photos/dot.png">&nbsp; Missouri Military Academy (Boys) </p>
@@ -173,28 +173,28 @@
     <div class="chiase" id="chiase">
         <div class="row chiase-r1">
             <div class="col-xs-12 cssmallheader"><h2 style="margin-top: 0"><img src="photos/arrows.png">&nbsp; DU HỌC SINH CHIA SẺ</h2></div>
-            <div class="col-md-3 col-md-offset-0 col-sm-3 col-sm-offset-0 col-xs-7 col-xs-offset-1"><img class="img-responsive" src="photos/dhs1.jpg"></div>
-            <div class="col-md-9 col-sm-9 chiaseheader">
+            <div class="col-xs-7 col-xs-offset-1 col-sm-3 col-sm-offset-0"><img class="img-responsive" src="photos/dhs1.jpg"></div>
+            <div class="col-sm-9 chiaseheader">
                 <h2 style="margin-top: 0"><img src="photos/arrows.png">&nbsp; DU HỌC SINH CHIA SẺ</h2>
-                <div class="col-md-12 col-xs-12" style="text-align: left">
+                <div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0" style="text-align: left">
                     <h4>HỌC BỔNG 60% TẠI BOSWORTH COLLEGE, ANH</h4>
                     <p style="font-size: 17px">Trước khi đi du học, em cũng có nhiều điều bỡ ngỡ trong việc làm thủ tục, tuy nhiên rất may mắn vì được các anh chị và nhất là cô Hương ở trung tâm Sunrise hướng dẫn chu đáo nên em và bố mẹ cũng cảm thấy yên tâm hơn. Trong suốt 2 năm vừa qua, bố mẹ em cũng nắm bắt rõ tình hình học tập sinh hoạt của em qua các báo cáo nhận xét mỗi kì của trường gửi về qua trung tâm.</p>
                 </div>
             </div>
         </div>
         <div class="row chiase-r2">
-            <div class="col-md-3 col-md-offset-0 col-sm-3 col-sm-offset-0 col-xs-7 col-xs-offset-1 r2smallimg"><img  class="img-responsive"  src="photos/dhs2.jpg"></div>
-            <div class="col-md-9 col-md-offset-0 col-sm-9 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+            <div class="col-xs-7 col-xs-offset-1 col-sm-3 col-sm-offset-0 r2smallimg"><img  class="img-responsive"  src="photos/dhs2.jpg"></div>
+            <div class="col-xs-10 col-xs-offset-1 col-sm-9 col-sm-offset-0 ">
                 <h4>DU HỌC SINH TẠI STONY BROOK SCHOOL, MA, MỸ</h4>
                 <p style="font-size: 17px">Stony Brook là ngôi trường rất tốt để theo học. Thời gian học trong trường giúp mình biết cách sống và suy nghĩ trong một môi trường đa văn hoá, đa tôn giáo. Các môn học ở trường như khoa học, lịch sử dạy rất tốt. Cơ sở vật chất đầy đủ và môn thể chất còn là môn bắt buộc nữa.</p>
             </div>
-            <div class="col-md-3 col-sm-3 r2bigimg"><img  class="img-responsive"  src="photos/dhs2.jpg"></div>
+            <div class="col-sm-3 r2bigimg"><img  class="img-responsive"  src="photos/dhs2.jpg"></div>
         </div>
         <div class="row chiase-r3">
-            <div class="col-md-3 col-md-offset-0 col-sm-3 col-sm-offset-0 col-xs-7 col-xs-offset-1"><img  class="img-responsive"  src="photos/dhs3.jpg"></div>
-            <div class="col-md-9 col-md-offset-0 col-sm-9 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+            <div class="col-xs-7 col-xs-offset-1 col-sm-3 col-sm-offset-0 "><img  class="img-responsive"  src="photos/dhs3.jpg"></div>
+            <div class="col-xs-10 col-xs-offset-1 col-sm-9 col-sm-offset-0 ">
                 <h4>HỌC BỔNG 50%, GIẢI NHÌ TẠI ABBEY HAS GOT TALENT, ABBEY COLLEGE, ANH</h4>
-                <p style="font-size: 17px">Học bổng 50%, Giải nhì tại Abbey Has got Talent,  Abbey College, Anh </p>
+                <p style="font-size: 17px">Quãng thời gian bên Anh đã giúp em phát triển 2 điều: Kỹ năng học và kỹ năng sống. Kỹ năng học bao gồm ngôn ngữ TA, kinh tế học, toán học, và cách mà nền giáo dục Anh đào tạo học sinh. Kỹ năng sống là các kỹ năng quản lý tài chính cá nhân, lập kế hoạch, biết quản lý thời gian và sống độc lập.</p>
             </div>
         </div>
         <div class="row chiase-r4">
@@ -212,15 +212,15 @@
             <div class="col-md-12"><h2><img src="photos/whitearrows.png">&nbsp;&nbsp;&nbsp;&nbsp; GÓI TƯ VẤN TỪ A ĐẾN Z</h2></div>
         </div>
         <div class="row tuvan-r2">
-            <div class="col-md-4 col-sm-4 firstcol">
+            <div class="col-xs-11 col-sm-4 firstcol">
                 <h2 style="font-size: 24px; color: white">TRƯỚC DU HỌC</h2>
                 <p>- Làm kiểm tra IELTS, TOEFL, SAT miễn phí <br/>- Tư vấn chọn trường, thi học bổng phù hợp <br/>- Hướng dẫn tham gia các hoạt động ngoại khóa để nhận chứng chỉ  <br/>- Tạo điều kiện giao lưu với các cựu du học sinh đẻ chia sẻ kinh nghiệm <br/>- Hướng dẫn thủ tục tài chính, xin visa <br/>- Dịch thuật, hướng dẫn bài luận cá nhân <br/>- Đăng ký nhà ở, vé máy bay, đưa đón sân bay</p>
             </div>
-            <div class="col-md-4 col-sm-4 mdcol">
+            <div class="col-xs-11 col-sm-4 mdcol">
                 <h2 style="font-size: 24px; color: white">TRONG DU HỌC </h2>
                 <p>- Cùng gia đình và nhà trường quản lý và hỗ tợ du học sinh <br/>- Dịch thuật bảng điểm <br/>- Họp phụ huynh (tùy theo  trường) <br/>- Hỗ trợ hồ sơ thăm thân <br/>- Giữ liên lạc và hỗ trợ du học sinh qua Email/facebook</p>
             </div>
-            <div class="col-md-4 col-sm-4 lastcol">
+            <div class="col-xs-11 col-sm-4 lastcol">
                 <h2 style="font-size: 24px; color: white">SAU DU HỌC</h2>
                 <p>- Liên kết các công ty trong và ngoài nước để tuyển dụng du học sinh <br/>- Hợp tác kinh doanh cùng du học sinh</p>
             </div>
@@ -236,22 +236,21 @@
     </div><!----tuvan------>
     <div class="footer">
         <div class="row ft-r1">
-            <div class="col-md-4 col-sm-4 col-xs-4">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0">
                 <p><strong>TRỤ SỞ CHÍNH SUNRISE VIETNAM</strong></p>
                 <p style="font-size: 14px">
                     <img src="photos/ft-home.png">&nbsp; 86 Cửa Bắc - Ba Đình - Hà Nội<br/>
                     <img src="photos/ft-mobile.png">&nbsp;&nbsp; Tel: (84-4) 3722.4878 - 3722.4898<br/>
                     <img src="photos/ft-printer.png">&nbsp;&nbsp;Fax: (84-4) 3722.4855</p>
             </div>
-            <div class="col-md-4  col-sm-4 col-xs-4">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0">
                 <p><strong>VĂN PHÒNG HẢI PHÒNG</strong></p>
                 <p style="font-size: 14px">
                     <img src="photos/ft-home.png">&nbsp; 29 Nguyễn Trãi - Ngô Quyền  <br/>
                     <img src="photos/ft-mobile.png">&nbsp;&nbsp; Tel: (84-31) 2640689 - 3653269  <br/>
                     <img src="photos/ft-printer.png">&nbsp;&nbsp;Fax: (84-31) 3732895</p>
-
             </div>
-            <div class="col-md-4  col-sm-4 col-xs-4">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0">
                 <p><strong>VĂN PHÒNG HỒ CHÍ MINH</strong></p>
                 <p style="font-size: 14px">
                     <img src="photos/ft-home.png">&nbsp; Lầu 7, Tòa nhà Thanh Dung, số 179 Nguyễn Cư Trinh, Phường  Nguyễn Cư Trinh, Q.1  <br/>
@@ -260,9 +259,9 @@
             </div>
         </div>
         <div class="row ft-r2">
-            <div class="col-md-4 col-sm-4 col-xs-5"><p>www.sunrisevietnam.com</p></div>
-            <div class="col-md-4 col-sm-4 col-xs-7"><p>Email: info@sunrisevietnam.com</p></div>
-            <div class="col-md-4 col-sm-4 col-xs-12"><p>Facebook: fb.com/thaiduong.vietnam</p></div>
+            <div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-0"><p>www.sunrisevietnam.com</p></div>
+            <div class="col-xs-6 col-sm-4"><p>Email: info@sunrisevietnam.com</p></div>
+            <div class="col-xs-12 col-sm-4"><p>Facebook: fb.com/thaiduong.vietnam</p></div>
         </div>
     </div>
 </div>
