--- a/index.html
+++ b/index.html
@@ -66,10 +66,12 @@
                 </div>
             <div class="col-xs-11 col-sm-5 anhth-r1m">
                 <h2>DU HỌC PHỔ THÔNG, DỰ BỊ ĐẠI HỌC ANH 2016</h2>
-                <p>- Dành cho học sinh hoàn thành lớp 8 từ Việt Nam trở lên </p>
-                <p>- Yêu cầu IELTS 4.5 trở lên. Chưa có tiếng Anh có thể làm kiểm tra tại Sunrise Vietnam  </p>
-                <p>- Học sinh sẽ được ở nội trú hoặc ở cùng gia đình bản xứ. Sunrise Vietnam hỗ trợ hồ sơ thăm thân, dịch thuật, họp phụ huynh,....  </p>
-                <p>- Cơ hội học bổng cao dành cho học sinh khá giỏi. </p>
+                <ul>
+                <li>Dành cho học sinh hoàn thành lớp 8 từ Việt Nam trở lên </li>
+                <li>Yêu cầu IELTS 4.5 trở lên. Chưa có tiếng Anh có thể làm kiểm tra tại Sunrise Vietnam  </li>
+                <li>Học sinh sẽ được ở nội trú hoặc ở cùng gia đình bản xứ. Sunrise Vietnam hỗ trợ hồ sơ thăm thân, dịch thuật, họp phụ huynh,....  </li>
+                <li>Cơ hội học bổng cao dành cho học sinh khá giỏi. </li>
+                </ul>
                 <h3>LIÊN HỆ NGAY HOTLINE: 0906221313</h3>
             </div>
             <div class="col-xs-12 col-sm-6 anhth-r1r">
@@ -82,25 +84,27 @@
             </div>
             <div class="col-xs-12 col-sm-6 anhth-r2r">
                 <h2 align="right"><img src="photos/arrows.png"> DANH SÁCH CÁC TRƯỜNG CÓ HỌC BỔNG 50% - 100%</h2>
-                <p>- Bellerbys College ( Brighton, Cambridge,  Oxford, London )</p>
-                <p>- CTC (Cambridge Tutors College) </p>
-                <p>- MPW ( London, Cambridge, Birmingham)</p>
-                <p>- Abbey DLD College ( London, Cambridge, Birmingham & Manchester)</p>
-                <p>- Kings Colleges (London, Oxford, Bournemouth)</p>
-                <p>- Newton College </p>
-                <p>- CATS College ( London, Cambridge, Canterbury)</p>
-                <p>- Cardiff Sixth Form College ( Cardiff, Oxford) </p>
-                <p>- Chelsea Independent College </p>
-                <p>- Oxford Tutorials College</p>
-                <p>- St Andrew’s College </p>
-                <p>- Concord College </p>
-                <p>- Bosworth Independent College </p>
-                <p>- Ashbourne College </p>
-                <p>- Bromsgrove School </p>
-                <p>- Brighton College </p><p>- Canford College </p>
-                <p>- Chase Grammar School </p><p>- The Royal Wolverhampton School </p>
-                <p>- Brockenhurst College </p><p>- Chichester College </p><p>- Sussex Down College </p>
-                <p>- Loughborough College </p><p>- Hammersmith and West London College</p>
+                <ul>
+                <li>Bellerbys College (Brighton, Cambridge, Oxford, London)</li>
+                <li>CTC (Cambridge Tutors College)</li>
+                <li>MPW (London, Cambridge, Birmingham)</li>
+                <li>Abbey DLD College (London, Cambridge, Birmingham & Manchester)</li>
+                <li>Kings Colleges (London, Oxford, Bournemouth)</li>
+                <li>Newton College</li>
+                <li>CATS College (London, Cambridge, Canterbury)</li>
+                <li>Cardiff Sixth Form College (Cardiff, Oxford)</li>
+                <li>Chelsea Independent College</li>
+                <li>Oxford Tutorials College</li>
+                <li>St Andrew’s College</li>
+                <li>Concord College</li>
+                <li>Bosworth Independent College</li>
+                <li>Ashbourne College</li>
+                <li>Bromsgrove School</li>
+                <li>Brighton College</li><li>Canford College </li>
+                <li>Chase Grammar School</li><li>The Royal Wolverhampton School</li>
+                <li>Brockenhurst College</li><li>Chichester College</li><li>Sussex Down College</li>
+                <li>Loughborough College</li><li>Hammersmith and West London College</li>
+                </ul>
             </div>
         </div>
         <div class="row row3">
@@ -119,50 +123,58 @@
             <h2 style="text-align: center; color: #ffd119"><img src="photos/whitearrows.png">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DU HỌC PHỔ THÔNG MỸ, CANADA&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="photos/rightwhitearrows.png" ></h2>
         </div> </div>
         <div class="row myca-r2">
-            <div class="col-xs-12 col-sm-6 ">
-                <p>- Dành cho học sinh hoàn thành lớp 8 tại Việt Nam trở lên  </p>
-                <p>- CÓ IELTS/ TOEFL là lợi thế. Có thể làm bài kiểm tra tại Sunrise Vietnam  </p>
-                <p>- Sunrise Vietnam hỗ trợ thi thử TOEFL, SAT</p>
+            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0">
+                <ul>
+                <li><img src="photos/dot.png">&nbsp; Dành cho học sinh hoàn thành lớp 8 tại Việt Nam trở lên</li>
+                <li><img src="photos/dot.png">&nbsp; CÓ IELTS/ TOEFL là lợi thế. Có thể làm bài kiểm tra tại Sunrise Vietnam</li>
+                <li><img src="photos/dot.png">&nbsp; Sunrise Vietnam hỗ trợ thi thử TOEFL, SAT</li></ul>
             </div>
-            <div class="col-xs-12 col-sm-6 ">
-                <p>- Học sinh ở nội trú hoặc gia đình bản xứ. Sunrise Vietnam luyện visa tỷ lệ đậu 99%, hỗ trợ visa thăm thân, dịch thuật,....  </p>
-                <p>- Sunrise Vietnam hỗ trợ làm hồ sơ xin học bổng, hỗ trợ tài chính cho học sinh khá giỏi</p>
-                <p style="font-size: 18px; font-weight:bold">- Hạn nộp hồ sơ các trường nội trú TOP đầu là 15/01/2016</p>
+            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0">
+                <ul>
+                <li><img src="photos/dot.png">&nbsp; Học sinh ở nội trú hoặc gia đình bản xứ. Sunrise Vietnam luyện visa tỷ lệ đậu 99%, hỗ trợ visa thăm thân, dịch thuật,...</li>
+                <li><img src="photos/dot.png">&nbsp; Sunrise Vietnam hỗ trợ làm hồ sơ xin học bổng, hỗ trợ tài chính cho học sinh khá giỏi</li>
+                <li style="font-size: 18px; font-weight:bold"><img src="photos/dot.png">&nbsp; Hạn nộp hồ sơ các trường nội trú TOP đầu là 15/01/2016</li></ul>
             </div>
         </div>
         <div class="row myca-r3"><div class="col-md-12" style="text-align: center">
             <h2 style="text-align: center; color: #ffd119"><img src="photos/whitearrows.png">&nbsp;&nbsp;&nbsp;DANH SÁCH MỘT SỐ TRƯỜNG NỘI TRÚ TOP ĐẦU TẠI MỸ, CANADA &nbsp;&nbsp;&nbsp;<img src="photos/rightwhitearrows.png"></h2>
         </div> </div>
         <div class="row myca-r4">
-            <div class="col-xs-12 col-sm-4 firstcol">
-                <p><img src="photos/dot.png">&nbsp; Chapel Hill Chauncy Hall</p>
-                <p><img src="photos/dot.png">&nbsp; Cranbrook Schools </p>
-                <p><img src="photos/dot.png">&nbsp; Darrow </p>
-                <p><img src="photos/dot.png">&nbsp; Foxcroft Academy </p>
-                <p><img src="photos/dot.png">&nbsp; Justin - Siena High School (ESL - only 1 class) </p>
-                <p><img src="photos/dot.png">&nbsp; The Knox School </p>
-                <p><img src="photos/dot.png">&nbsp; La Lumiere School </p>
-                <p><img src="photos/dot.png">&nbsp; Lawrence Academy</p>
+            <div class="col-sm-4 firstcol">
+                <ul>
+                <li><img src="photos/dot.png">&nbsp; Chapel Hill Chauncy Hall</li>
+                <li><img src="photos/dot.png">&nbsp; Cranbrook Schools </li>
+                <li><img src="photos/dot.png">&nbsp; Darrow </li>
+                <li><img src="photos/dot.png">&nbsp; Foxcroft Academy</li>
+                <li><img src="photos/dot.png">&nbsp; Justin - Siena High School (ESL - only 1 class)</li>
+                <li><img src="photos/dot.png">&nbsp; The Knox School </li>
+                <li><img src="photos/dot.png">&nbsp; La Lumiere School </li>
+                <li><img src="photos/dot.png">&nbsp; Lawrence Academy</li>
+                </ul>
             </div>
-            <div class="col-xs-12 col-sm-4 mdcol">
-                <p><img src="photos/dot.png">&nbsp; Ribet Academy </p>
-                <p><img src="photos/dot.png">&nbsp; Saint Andrew's School </p>
-                <p><img src="photos/dot.png">&nbsp; Saint Timothy's School (Girls) </p>
-                <p><img src="photos/dot.png">&nbsp; Stoneleigh-Burnham School (Girls) </p>
-                <p><img src="photos/dot.png">&nbsp; The Stony Brook School </p>
-                <p><img src="photos/dot.png">&nbsp; The Storm King School </p>
-                <p><img src="photos/dot.png">&nbsp; White Mountain School </p>
-                <p><img src="photos/dot.png">&nbsp; The Winchendon School</p>
+            <div class="col-sm-4 mdcol">
+                <ul>
+                <li><img src="photos/dot.png">&nbsp; Ribet Academy </li>
+                <li><img src="photos/dot.png">&nbsp; Saint Andrew's School </li>
+                <li><img src="photos/dot.png">&nbsp; Saint Timothy's School (Girls)</li>
+                <li><img src="photos/dot.png">&nbsp; Stoneleigh-Burnham School (Girls)</li>
+                <li><img src="photos/dot.png">&nbsp; The Stony Brook School </li>
+                <li><img src="photos/dot.png">&nbsp; The Storm King School </li>
+                <li><img src="photos/dot.png">&nbsp; White Mountain School </li>
+                <li><img src="photos/dot.png">&nbsp; The Winchendon School</li>
+                </ul>
             </div>
-            <div class="col-xs-12 col-sm-4 lastcol">
-                <p><img src="photos/dot.png">&nbsp; The Masters School </p>
-                <p><img src="photos/dot.png">&nbsp; Mercersburg Academy </p>
-                <p><img src="photos/dot.png">&nbsp; Missouri Military Academy (Boys) </p>
-                <p><img src="photos/dot.png">&nbsp; Perkiomen School </p>
-                <p><img src="photos/dot.png">&nbsp; Pilgrim School </p>
-                <p><img src="photos/dot.png">&nbsp; CIC  </p>
-                <p><img src="photos/dot.png">&nbsp; Pickering College </p>
-                <p><img src="photos/dot.png">&nbsp; Bronte College
+            <div class="col-sm-4 lastcol">
+                <ul>
+                <li><img src="photos/dot.png">&nbsp; The Masters School</li>
+                <li><img src="photos/dot.png">&nbsp; Mercersburg Academy</li>
+                <li><img src="photos/dot.png">&nbsp; Missouri Military Academy (Boys)</li>
+                <li><img src="photos/dot.png">&nbsp; Perkiomen School </li>
+                <li><img src="photos/dot.png">&nbsp; Pilgrim School</li>
+                <li><img src="photos/dot.png">&nbsp; CIC</li>
+                <li><img src="photos/dot.png">&nbsp; Pickering College </li>
+                <li><img src="photos/dot.png">&nbsp; Bronte College</li>
+                </ul>
             </div>
         </div>
         <div class="row myca-r5"><div class="col-md-12" style="text-align: center">
@@ -214,15 +226,16 @@
         <div class="row tuvan-r2">
             <div class="col-xs-11 col-sm-4 firstcol">
                 <h2 style="font-size: 24px; color: white">TRƯỚC DU HỌC</h2>
-                <p>- Làm kiểm tra IELTS, TOEFL, SAT miễn phí <br/>- Tư vấn chọn trường, thi học bổng phù hợp <br/>- Hướng dẫn tham gia các hoạt động ngoại khóa để nhận chứng chỉ  <br/>- Tạo điều kiện giao lưu với các cựu du học sinh đẻ chia sẻ kinh nghiệm <br/>- Hướng dẫn thủ tục tài chính, xin visa <br/>- Dịch thuật, hướng dẫn bài luận cá nhân <br/>- Đăng ký nhà ở, vé máy bay, đưa đón sân bay</p>
+                <ul>
+                <li>Làm kiểm tra IELTS, TOEFL, SAT miễn phí</li><li>Tư vấn chọn trường, thi học bổng phù hợp</li><li>Hướng dẫn tham gia các hoạt động ngoại khóa để nhận chứng chỉ</li><li>Tạo điều kiện giao lưu với các cựu du học sinh đẻ chia sẻ kinh nghiệm</li><li>Hướng dẫn thủ tục tài chính, xin visa</li><li>Dịch thuật, hướng dẫn bài luận cá nhân</li><li>Đăng ký nhà ở, vé máy bay, đưa đón sân bay</li></ul>
             </div>
             <div class="col-xs-11 col-sm-4 mdcol">
                 <h2 style="font-size: 24px; color: white">TRONG DU HỌC </h2>
-                <p>- Cùng gia đình và nhà trường quản lý và hỗ tợ du học sinh <br/>- Dịch thuật bảng điểm <br/>- Họp phụ huynh (tùy theo  trường) <br/>- Hỗ trợ hồ sơ thăm thân <br/>- Giữ liên lạc và hỗ trợ du học sinh qua Email/facebook</p>
+                <ul><li>Cùng gia đình và nhà trường quản lý và hỗ tợ du học sinh</li><li>Dịch thuật bảng điểm</li><li>Họp phụ huynh (tùy theo trường)</li><li>Hỗ trợ hồ sơ thăm thân</li><li>Giữ liên lạc và hỗ trợ du học sinh qua Email/facebook</li></ul>
             </div>
             <div class="col-xs-11 col-sm-4 lastcol">
                 <h2 style="font-size: 24px; color: white">SAU DU HỌC</h2>
-                <p>- Liên kết các công ty trong và ngoài nước để tuyển dụng du học sinh <br/>- Hợp tác kinh doanh cùng du học sinh</p>
+                <ul><li>Liên kết các công ty trong và ngoài nước để tuyển dụng du học sinh</li><li>Hợp tác kinh doanh cùng du học sinh</li></ul>
             </div>
         </div>
         <div class="row tuvan-r3">
@@ -259,9 +272,9 @@
             </div>
         </div>
         <div class="row ft-r2">
-            <div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-0"><p>www.sunrisevietnam.com</p></div>
-            <div class="col-xs-6 col-sm-4"><p>Email: info@sunrisevietnam.com</p></div>
-            <div class="col-xs-12 col-sm-4"><p>Facebook: fb.com/thaiduong.vietnam</p></div>
+            <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0"><p>www.sunrisevietnam.com</p></div>
+            <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0"><p>Email: info@sunrisevietnam.com</p></div>
+            <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0"><p>Facebook: fb.com/thaiduong.vietnam</p></div>
         </div>
     </div>
 </div>
